[gd_scene load_steps=6 format=2]

[ext_resource path="res://resources/images/background.jpg" type="Texture" id=1]
[ext_resource path="res://resources/fonts/arial_large.tres" type="DynamicFont" id=2]
[ext_resource path="res://resources/images/small_circle.png" type="Texture" id=3]
[ext_resource path="res://ui/soundSettings/SoundSettings.gd" type="Script" id=4]
[ext_resource path="res://resources/fonts/arial_Extralarge.tres" type="DynamicFont" id=5]

[node name="SoundSettings" type="TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.163
anchor_top = 0.147
anchor_right = 0.837
anchor_bottom = 0.853
margin_left = -0.139999
margin_top = 0.160004
margin_right = 0.140015
margin_bottom = -0.160034
__meta__ = {
"_edit_use_anchors_": false
}

[node name="title" type="Label" parent="Panel"]
anchor_left = 0.315
anchor_right = 0.694
anchor_bottom = 0.131
margin_left = -0.069519
margin_top = 11.3265
margin_right = -0.146484
margin_bottom = -0.221512
custom_fonts/font = ExtResource( 5 )
text = "Sound Settings"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="container" type="VBoxContainer" parent="Panel"]
anchor_left = 0.362
anchor_top = 0.235
anchor_right = 0.909
anchor_bottom = 0.772
margin_left = -0.0911255
margin_top = 0.010376
margin_right = -0.152161
margin_bottom = -131.786
custom_constants/separation = 60
__meta__ = {
"_edit_use_anchors_": false
}

[node name="master_vol" type="HSlider" parent="Panel/container"]
margin_right = 472.0
margin_bottom = 51.0
custom_icons/grabber_disabled = ExtResource( 3 )
custom_icons/grabber_highlight = ExtResource( 3 )
custom_icons/grabber = ExtResource( 3 )
max_value = 3.0
value = 3.0

[node name="Label" type="Label" parent="Panel/container/master_vol"]
anchor_left = -0.588
anchor_right = -0.153
anchor_bottom = 0.802
margin_left = -0.756836
margin_top = 2.89087
margin_right = -0.0768433
margin_bottom = -0.0111313
custom_fonts/font = ExtResource( 2 )
text = "Sound volume"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sfx_vol" type="HSlider" parent="Panel/container"]
margin_top = 111.0
margin_right = 472.0
margin_bottom = 162.0
custom_icons/grabber_disabled = ExtResource( 3 )
custom_icons/grabber_highlight = ExtResource( 3 )
custom_icons/grabber = ExtResource( 3 )
max_value = 3.0
value = 3.0

[node name="Label" type="Label" parent="Panel/container/sfx_vol"]
anchor_left = -0.588
anchor_right = -0.153
anchor_bottom = 0.802
margin_left = -0.756836
margin_top = 2.89087
margin_right = -0.0768433
margin_bottom = -0.0111313
custom_fonts/font = ExtResource( 2 )
text = "Effects Volume"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="music_vol" type="HSlider" parent="Panel/container"]
margin_top = 222.0
margin_right = 472.0
margin_bottom = 273.0
custom_icons/grabber_disabled = ExtResource( 3 )
custom_icons/grabber_highlight = ExtResource( 3 )
custom_icons/grabber = ExtResource( 3 )
max_value = 3.0
value = 3.0

[node name="Label" type="Label" parent="Panel/container/music_vol"]
anchor_left = -0.588
anchor_right = -0.153
anchor_bottom = 0.802
margin_left = -0.756836
margin_top = 2.89087
margin_right = -0.0768433
margin_bottom = -0.0111313
custom_fonts/font = ExtResource( 2 )
text = "Music Volume"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Panel"]
anchor_left = 0.484
anchor_top = 0.855
anchor_right = 0.582
anchor_bottom = 0.961
margin_left = -0.692017
margin_top = 2.66
margin_right = -0.266022
margin_bottom = -0.188019
custom_fonts/font = ExtResource( 2 )
text = "OK"
__meta__ = {
"_edit_use_anchors_": false
}
